--- a/BanglaSpeech2Text_in_Colab.ipynb
+++ b/BanglaSpeech2Text_in_Colab.ipynb
@@ -30,7 +30,7 @@
       },
       "outputs": [],
       "source": [
-        "!pip install banglaspeech2text"
+        "%pip install banglaspeech2text"
       ]
     },
     {
