--- a/BanglaSpeech2Text_in_Colab.ipynb
+++ b/BanglaSpeech2Text_in_Colab.ipynb
@@ -1,6 +1,7 @@
 {
   "cells": [
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "Bua9A1lx9--w"
@@ -10,6 +11,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "5_ll7FpF-MgK"
@@ -30,10 +32,11 @@
       },
       "outputs": [],
       "source": [
-        "%pip install banglaspeech2text"
+        "%pip install banglaspeech2text --upgrade -q"
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "vEg0ro8R-XJB"
@@ -43,6 +46,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "yzDyqs67-eBq"
@@ -112,6 +116,15 @@
       },
       "source": [
         "### Check with gradio"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "%pip install gradio"
       ]
     },
     {
