--- a/BanglaSpeech2Text_in_Colab.ipynb
+++ b/BanglaSpeech2Text_in_Colab.ipynb
@@ -144,7 +144,7 @@
         "# You can also open the url and check it in mobile\n",
         "gr.Interface(\n",
         "    fn=stt.transcribe, \n",
-        "    inputs=gr.Audio(source=\"microphone\", type=\"filepath\"), \n",
+        "    inputs=gr.Audio(source=\"upload\", type=\"filepath\"),  # you can also use \"microphone\" as source\n",
         "    outputs=\"text\").launch(share=True)"
       ]
     }
